DEV: Checkpoints.recordProgress fixed